--- a/apps/store/templates/parts/product_list.html
+++ b/apps/store/templates/parts/product_list.html
@@ -2,9 +2,9 @@
 <div class="columns is-multiline">
     {% for p in list_products %}
         <div class="column is-3">
-            <div class="card">
-                <div class="card-image">
-                    <figure class="image">
+            <div class="card" style="border: 1px solid black;">
+                <div class="card-image" >
+                    <figure class="image" style="display: flex; justify-content: center;">
                         <img src="{{ p.get_thumbnail }}" style="width: 300px; height: 200px">
                     </figure>
                 </div>
