managerBase layout and color

--- a/apps/core/templates/managerBase.html
+++ b/apps/core/templates/managerBase.html
@@ -6,10 +6,19 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>{% block title %}{% endblock %}E-shop</title>
 		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.0/css/bulma.min.css">
+		<style>
+			{% comment %} .navbar{
+			background-color: #F99A52
+			} {% endcomment %}
+			body{
+			background-color: #f2efda
+			}
+		</style>
 	</head>
 
 	<body>
-		<nav class="navbar is-dark">
+	 <div id="content" style="font-size: 16px;">
+		<nav class="navbar is-light">
 			<div class="navbar-brand">
 				<a class="navbar-item" href="{% url 'productManager' %}">{% trans 'E-shop' %}</a>
 
@@ -55,33 +64,57 @@
 					  		</div>
 						</div>
 					</div>
-				
-
-					<div class="navbar-item has-dropdown is-hoverable">
-						<a href="#" class="navbar-link">Language</a>
-						<div class="navbar-dropdown">
-					  		<form class="navbar-item" action="{% url 'set_language' %}" method="post">
-								{% csrf_token %}
-								<div class="select">
-									<select name="language" onchange="this.form.submit()">
-										{% get_current_language as LANGUAGE_CODE %}
-										{% get_available_languages as LANGUAGES %}
-										{% get_language_info_list for LANGUAGES as languages %}
-										{% for language in languages %}
-							  				<option value="{{ language.code }}" {% if language.code == LANGUAGE_CODE %} selected {% endif %}>
-												{{ language.name_local }}
-							  				</option>
-										{% endfor %}
-						  			</select>
-								</div>
-					  		</form>
-						</div>
-					</div>
 				</div>
 
 			</div>
 
         </nav>
+
+		<div style="display: flex; justify-content: space-between; align-items: center; margin-right: 10px; margin-left: 10px;">
+			<div style="text-align: left;">
+			  <span style="display: inline-block; vertical-align: middle; line-height: 40px; margin-right: 10px;" data-translate="{% trans 'Please choose the font size' %}">{% trans 'Please choose the font size' %}:</span>
+			  <button id="small-font" style="vertical-align: middle; line-height: 40px;">小</button>
+			  <button id="medium-font" style="vertical-align: middle; line-height: 40px;">中</button>
+			  <button id="large-font" style="vertical-align: middle; line-height: 40px;">大</button>
+			  {% comment %} <span style="display: inline-block; vertical-align: middle; line-height: 40px; margin-right: 10px;">Please choose the font size:</span> {% endcomment %}
+			  <select id="font-select" style="vertical-align: middle; line-height: 40px;">
+				<option value="10px">10px</option>
+				<option value="12px">12px</option>
+				<option value="14px">14px</option>
+				<option value="16px">16px</option>
+				<option value="18px">18px</option>
+				<option value="20px">20px</option>
+				<option value="22px">22px</option>
+				<option value="24px">24px</option>
+				<option value="26px">26px</option>
+				<option value="28px">28px</option>
+				<option value="30px">30px</option>
+				<option value="custom">Custom</option>
+			  </select>
+			  <input type="text" id="custom-font-size" style="display: none; width: auto; margin-left: 10px; vertical-align: middle; line-height: 20px;" placeholder="Custom size (px)">
+			  <button id="apply-font-size" style="vertical-align: middle; line-height: 20px;" class="button is-info is-light" data-translate="{% trans 'Apply' %}">{% trans 'Apply' %}</button>
+			</div>
+			
+		  
+			<div style="text-align: right;">
+			  <span style="display: inline-block; vertical-align: middle; line-height: 40px; margin-right: 10px;" data-translate="{% trans 'Please choose your language' %}">{% trans 'Please choose your language' %}:</span>
+			  <form class="form-inline ml-auto" action="{% url 'set_language' %}" method="post" style="float: right;">
+				{% csrf_token %}
+				<div class="select">
+				  <select name="language" onchange="this.form.submit()">
+					{% get_current_language as LANGUAGE_CODE %}
+					{% get_available_languages as LANGUAGES %}
+					{% get_language_info_list for LANGUAGES as languages %}
+					{% for language in languages %}
+					  <option value="{{ language.code }}" {% if language.code == LANGUAGE_CODE %} selected {% endif %}>
+						{{ language.name_local }}
+					  </option>
+					{% endfor %}
+				  </select>
+				</div>
+			  </form>
+			</div>
+		</div>
 
 		<section class="section">
 			{% block content %}
@@ -100,7 +133,97 @@
 				</div>
 			</div>
 		</footer>
+	 </div>
 		<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+
+		<script>
+    		// 检查本地存储中是否有字体大小设置
+    		var fontSize = localStorage.getItem('fontSize');
+    		if (fontSize) {
+        		document.getElementById('content').style.fontSize = fontSize;
+    		}
+
+			document.getElementById('small-font').addEventListener('click', function() {
+				document.getElementById('content').style.fontSize = '10px';
+				// 将选择的字体大小保存到本地存储
+				localStorage.setItem('fontSize', '10px');
+			});
+		
+			document.getElementById('medium-font').addEventListener('click', function() {
+				document.getElementById('content').style.fontSize = '16px';
+				localStorage.setItem('fontSize', '16px');
+			});
+		
+			document.getElementById('large-font').addEventListener('click', function() {
+				document.getElementById('content').style.fontSize = '22px';
+				localStorage.setItem('fontSize', '22px');
+			});
+
+    		document.getElementById('font-select').addEventListener('change', function() {
+				var selectedValue = this.value;
+				if (selectedValue === 'custom') {
+					document.getElementById('custom-font-size').style.display = 'inline-block';
+					document.getElementById('apply-font-size').style.display = 'inline-block'; // 显示"Apply"按钮
+				} else {
+					document.getElementById('custom-font-size').style.display = 'none';
+					document.getElementById('apply-font-size').style.display = 'none'; // 隐藏"Apply"按钮
+					document.getElementById('content').style.fontSize = selectedValue;
+					// 将选择的字体大小保存到本地存储
+					localStorage.setItem('fontSize', selectedValue);
+				}
+			});
+
+			document.getElementById('apply-font-size').addEventListener('click', function() {
+				var customFontSize = document.getElementById('custom-font-size').value;
+				if (customFontSize) {
+					document.getElementById('content').style.fontSize = customFontSize;
+					// 将选择的字体大小保存到本地存储
+					localStorage.setItem('fontSize', customFontSize);
+				}
+			});
+
+			window.addEventListener('DOMContentLoaded', function() {
+				var fontSize = localStorage.getItem('fontSize');
+				if (fontSize) {
+				  document.getElementById('content').style.fontSize = fontSize;
+				  if (fontSize === 'custom') {
+					document.getElementById('apply-font-size').style.display = 'none';
+					document.getElementById('font-select').value = 'custom'; // 设置字体大小选择框的选中值为'custom'
+					document.getElementById('custom-font-size').style.display = 'inline-block';
+				  } else {
+					document.getElementById('apply-font-size').style.display = 'none';
+					document.getElementById('font-select').value = fontSize; // 设置字体大小选择框的选中值为之前保存的大小
+					document.getElementById('custom-font-size').style.display = 'none';
+				  }
+				}
+			});
+
+    		var elements = document.querySelectorAll('[data-translate]');
+
+    		elements.forEach(function(element) {
+        		var speechReported = false;
+
+        		function handleMouseEnter() {
+            		if (!speechReported) {
+                		timeoutId = setTimeout(function() {
+							var text = element.getAttribute('data-translate');
+							var speech = new SpeechSynthesisUtterance(text);
+							speechSynthesis.speak(speech);
+							speechReported = true;
+						}, 2000); 
+            		}
+        		}
+
+        		function handleMouseLeave() {
+					clearTimeout(timeoutId);
+            		speechReported = false;
+        		}
+
+        		element.addEventListener('mouseenter', handleMouseEnter);
+        		element.addEventListener('mouseleave', handleMouseLeave);
+    		});
+		</script>
+
 		{% block scripts %}
 		{% endblock %}
 	</body>
