--- a/apps/core/templates/base.html
+++ b/apps/core/templates/base.html
@@ -182,8 +182,8 @@
 				</div>
 
 				<div class="column is-8">
-					<a href="{% url 'contact' %}" class="navbar-item" data-translate="{% trans 'Contact' %}">{% trans 'Contact' %}</a>
-					<a href="{% url 'about' %}" class="navbar-item" data-translate="{% trans 'About' %}">{% trans 'About' %}</a>
+					<a href="{% url 'contact' %}" class="navbar-item" data-translate="{% trans 'Contact' %}"><i class="fa-solid fa-book" style="margin-right: 5px;"></i>{% trans 'Contact' %}</a>
+					<a href="{% url 'about' %}" class="navbar-item" data-translate="{% trans 'About' %}"><i class="fa-solid fa-phone" style="margin-right: 5px;"></i>{% trans 'About' %}</a>
 				</div>
 			</div>
 		</footer>
