--- a/apps/core/templates/managerBase.html
+++ b/apps/core/templates/managerBase.html
@@ -1,11 +1,15 @@
 <!-DOCTYPE html>
+{% load static %}
 {% load i18n %}
 <html>
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>{% block title %}{% endblock %}E-shop</title>
-		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.0/css/bulma.min.css">
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/1.0.0/css/bulma.min.css">
+		{% comment %} <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.0/css/bulma.min.css"> {% endcomment %}
+		<link rel="stylesheet" href="{% static 'main.css' %}">
+		<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 		<style>
 			{% comment %} .navbar{
@@ -162,16 +166,17 @@
 				</div>
 
 				<div class="column is-8">
-					<a href="{% url 'contact' %}" class="navbar-item" data-translate="{% trans 'Contact' %}">{% trans 'Contact' %}</a>
-					<a href="{% url 'about' %}" class="navbar-item" data-translate="{% trans 'About' %}">{% trans 'About' %}</a>
+					<a href="{% url 'contact' %}" class="navbar-item" data-translate="{% trans 'Contact' %}"><i class="fa-solid fa-book" style="margin-right: 5px;"></i>{% trans 'Contact' %}</a>
+					<a href="{% url 'about' %}" class="navbar-item" data-translate="{% trans 'About' %}"><i class="fa-solid fa-phone" style="margin-right: 5px;"></i>{% trans 'About' %}</a>
 				</div>
 			</div>
 		</footer>
 	 </div>
 
 		<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
-
+		<script src="https://unpkg.com/vuex@3.5.1/dist/vuex.js"></script>
 		<script>
+			
     		// 检查本地存储中是否有字体大小设置
     		var fontSize = localStorage.getItem('fontSize');
     		if (fontSize) {
